# basic-webapp

./: Cargo.toml  readme.md
etc/: test.toml
schema/: Makefile  create-db.sql  drop-db.sql
src/: webapp.rs
static/: Makefile  app.js  styles.css
templates/: base.html  frontpage.html
