[package]
name = "basic-webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-metrics = "0.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
config = "0.15.15"
env_logger = "0.11.8"
http = "1.3.1"
log = "0.4.27"
metrics-exporter-prometheus = { version = "0.17.2", features = [ "http-listener" ], default-features = false }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["ipnetwork", "chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "set-header", "trace"] }
tracing = "0.1.41"
uuid = { version = "1.18.0", features = ["serde"] }

[[bin]]
name = "basic-webapp"
path = "src/webapp.rs"

